--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,30 +13,30 @@ $pane-color:  #DEDEDE;
 	height: 450px;
 	overflow: hidden;
 	img{
-		width:100%;
-		height: 450px;
+		width:auto;
+		height: 100%;
 		&:hover{
 			height: 600px;
 		}
 
-	animation-name: borda;
-	animation-duration: 20s;
-	animation-timing-function: linear;
-	animation-direction: normal;
-	animation-iteration-count: infinite; }
+		animation-name: borda;
+		animation-duration: 20s;
+		animation-timing-function: linear;
+		animation-direction: normal;
+		animation-iteration-count: infinite; }
 
-	@keyframes borda {
-	0% {
-		transform: scale(1,1);
-	}
+		@keyframes borda {
+		0% {
+			transform: scale(1,1);
+		}
 
-	50% {
-		transform: scale(1.2,1.2);
-	}
+		50% {
+			transform: scale(1.2,1.2);
+		}
 
-	100% {
-		transform: scale(1,1);
-	}
+		100% {
+			transform: scale(1,1);
+		}
 
 	}
 }
@@ -55,12 +55,9 @@ $pane-color:  #DEDEDE;
 
 	}
 	.header{
-
-		z-index: 1;
 		width: 100%;
 		margin-top: -400px;
 		height: 400px;
-		
 		transition: background-size 1s linear;
 		&:hover{
 			background-size: 110%;
@@ -84,15 +81,13 @@ $pane-color:  #DEDEDE;
 		animation-iteration-count: 1; }
 
 		@keyframes rodar {
-		0% {
-			margin-left: -2000px;
-			transform: rotate(0deg);
-		}
-
-		100% {
-			transform: rotate(360deg);
-		}
-
+			0% {
+				margin-left: -2000px;
+				transform: rotate(0deg) rotateY(0deg);
+			}
+			100% {
+				transform: rotate(360deg) rotateY(360deg);
+			}
 		}
 		
 }
@@ -101,6 +96,7 @@ $pane-color:  #DEDEDE;
 	color:$element-color;
 	text-shadow: 0 0 3px $element-color;
 	font-size: 40px;
+	transition: all 0.2s linear;
 }
 .social{
 	background-color: $pane-color;
@@ -132,6 +128,12 @@ $pane-color:  #DEDEDE;
 .jobs{
 	height: 400px;
 	background-color: #009688;
+	overflow: hidden;
+	img{
+		height: 120%;
+		width:auto;
+		opacity:0.4;
+	}
 }
 
 .skills{
