--- a/jade/index.jade
+++ b/jade/index.jade
@@ -16,22 +16,19 @@ html
 					a.brand-logo(href="#!") Luan Souza
 					ul.right.hide-on-med-and-down
 						li
-							a(href="sass.html") Sass
-						li
-							a(href="badges.html") Components
-						li.active
-							a(href="collapsible.html") JavaScript
+							a(href="sass.html") Social
+						
 
 			main.row
 				.fundo.col-md-13
-					img(src="img/fundo.jpg" )
+					img(src="img/fundo2.jpg" )
 				.header.center.col-md-12.transparent
 					a.btn-floating.col.md.12.photo.animated.bounceInLeft
 						i.material-icons
 
 		
 		section.center.col-md-13.skills.row
-			h1.title.col-md-13.center Trabalhos
+			h1.title.col-md-13.center#trab Trabalhos
 			.jobs-box.col-md-6.col-xs-12.center.col-lg-3.border.wow.flipInX
 				img(src="img/lbook.png").photo-card
 			.jobs-box.col-md-6.col-xs-12.col-lg-3.center.wow.flipInX
@@ -43,6 +40,7 @@ html
 			
 
 		section.col-md-13.jobs.row
+			img(src="img/fundo.jpg")
 		section.col-md-13.social.row
 			h1.title.col-md-13.center Social
 			span.social-box.col-md-6.col-xs-12.center.border
@@ -63,7 +61,7 @@ html
 			{
 				boxClass:     'wow',      // default
 				animateClass: 'animated', // default
-				offset:       200,          // default
+				offset:       100,          // default
 				mobile:       true,       // default
 				live:         true        // default
 			}
