--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13359,8 +13359,8 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   height: 450px;
   overflow: hidden; }
   .fundo img {
-    width: 100%;
-    height: 450px;
+    width: auto;
+    height: 100%;
     animation-name: borda;
     animation-duration: 20s;
     animation-timing-function: linear;
@@ -13386,7 +13386,6 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
     .content nav .nav-wrapper {
       padding-left: 200px; }
   .content .header {
-    z-index: 1;
     width: 100%;
     margin-top: -400px;
     height: 400px;
@@ -13410,13 +13409,14 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 @keyframes rodar {
   0% {
     margin-left: -2000px;
-    transform: rotate(0deg); }
+    transform: rotate(0deg) rotateY(0deg); }
   100% {
-    transform: rotate(360deg); } }
+    transform: rotate(360deg) rotateY(360deg); } }
 .title {
   color: #009688;
   text-shadow: 0 0 3px #009688;
-  font-size: 40px; }
+  font-size: 40px;
+  transition: all 0.2s linear; }
 
 .social {
   background-color: #DEDEDE;
@@ -13442,7 +13442,12 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 
 .jobs {
   height: 400px;
-  background-color: #009688; }
+  background-color: #009688;
+  overflow: hidden; }
+  .jobs img {
+    height: 120%;
+    width: auto;
+    opacity: 0.4; }
 
 .skills {
   transition: all 0.3s ease-in;
