--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,10 +49,6 @@ $pane-color:  #DEDEDE;
 		position: relative;
 		border:0;
 		box-shadow:0 0 0;
-		.nav-wrapper{
-			padding-left: 200px;
-		}
-
 	}
 	.header{
 		width: 100%;
@@ -70,7 +66,7 @@ $pane-color:  #DEDEDE;
 		width: 100px;
 		height: 100px;
 		background: url("../../img/user.jpg") center / cover;
-		margin-top: 330px;	
+		margin-top: 130px;	
 		transition: all 1.2 linear;
 
 		animation-name: rodar;
@@ -98,6 +94,22 @@ $pane-color:  #DEDEDE;
 	font-size: 40px;
 	transition: all 0.2s linear;
 }
+
+.fontNav{
+	margin-left: -25px;
+	&:hover{
+		text-decoration: none;
+		text-shadow: 0 0 10px $element-color;
+	}	
+}
+
+.descr{
+	font-size: 30px;
+	color: white;
+	padding-top: 50px;
+	text-shadow: 0 0 10px black;
+}
+
 .social{
 	background-color: $pane-color;
 	padding-top:0px;
