--- a/sass/style.scss
+++ b/sass/style.scss
@@ -104,7 +104,9 @@ $pane-color:  #DEDEDE;
 }
 
 .descr{
-	font-size: 30px;
+	overflow: hidden;
+	height: 200px;
+	font-size: 25px;
 	color: white;
 	padding-top: 50px;
 	text-shadow: 0 0 10px black;
@@ -141,10 +143,89 @@ $pane-color:  #DEDEDE;
 	height: 400px;
 	background-color: #009688;
 	overflow: hidden;
-	img{
-		height: 120%;
+
+	.quadros{
+		transition: all 0 linear;
 		width:auto;
-		opacity:0.4;
+		margin:auto;
+		overflow: hidden;
+		margin-top: 50px;
+		height: 300px;
+		background-size: 300px 600px;
+
+		animation-name: quadro;
+		animation-duration:15s;
+		animation-timing-function: linear;
+		animation-direction: normal;
+		animation-iteration-count: infinite; }
+
+		@keyframes quadro {
+		0% {
+			background:url("../../img/sass.png") center no-repeat ;
+			background-size: auto 300px;
+		}
+
+		8.33% {
+			background:url("../../img/sass.png") center no-repeat ;
+			background-size: auto 300px;
+		}
+
+		16.66% {
+			background:url("../../img/css.png") center no-repeat;
+			background-size: auto 300px;
+		}
+
+		24.99% {
+			background:url("../../img/css.png") center no-repeat;
+			background-size: auto 300px;
+		}
+
+		33.33% {
+			background:url("../../img/js.png") center no-repeat;
+			background-size: auto 300px;
+		}
+
+		41.66% {
+			background:url("../../img/js.png") center no-repeat;
+			background-size: auto 300px;
+		}
+
+		48.99% {
+			background:url("../../img/html.png") center no-repeat;
+			background-size: auto 300px;
+			
+		}
+
+		58.31% {
+			background:url("../../img/html.png") center no-repeat;
+			background-size: auto 300px;
+			
+		}
+
+		66.66% {
+			background:url("../../img/bootstrap.png") center no-repeat;
+			background-size: auto 300px;
+		}
+
+		74.99% {
+			background:url("../../img/bootstrap.png") center no-repeat;
+			background-size: auto 300px;
+		}
+
+		83.3% {
+			background:url("../../img/jade.png") center no-repeat;
+			background-size: auto 300px;
+		}
+
+		91.66% {
+			background:url("../../img/jade.png") center no-repeat;
+			background-size: auto 300px;
+		}
+
+		100% {
+			background:url("../../img/sass.png") center no-repeat;
+			background-size: auto 300px;
+		}
 	}
 }
 
@@ -152,6 +233,7 @@ $pane-color:  #DEDEDE;
 	transition: all 0.3s ease-in;
 	background-color: $pane-color;
 	padding:50px;
+	
 }
 
 .photo-card{
@@ -169,3 +251,4 @@ $pane-color:  #DEDEDE;
 .jobs{
 
 }
+
