--- a/jade/index.jade
+++ b/jade/index.jade
@@ -15,18 +15,18 @@ html
 				.nav-wrapper
 					a.brand-logo(href="#!").fontNav LS
 					ul.right.hide-on-med-and-down
-						li
-							a(href="sass.html").fontNav Social
+						
 						
 
 			main.row
 				.fundo.col-md-13
 					img(src="img/fundo2.jpg" )
 				.header.center.col-md-12.transparent
-					.descr 
-						p.wow.bounceInLeft(data-wow-delay="0.3s") Meu nome é Luan Souza, tenho 20 anos, 
-						p.wow.bounceInLeft(data-wow-delay="0.8s")  sou estudante de Sistemas para Internet, 
-						p.wow.bounceInLeft(data-wow-delay="1.3s")  entusiasta de programação e desenvolvimento web.
+					.descr
+						p.wow.bounceInLeft(data-wow-delay="0.3s") Meu nome é Luan Souza, tenho 20 anos
+						p.wow.bounceInLeft(data-wow-delay="0.8s")  sou estudante de Sistemas para Internet
+						p.hidden-xs.wow.bounceInLeft(data-wow-delay="1.3s")  entusiasta de programação e desenvolvimento web.
+						p.wow.bounceInLeft(data-wow-delay="1.3s").
 					a.btn-floating.col.md.12.photo.animated.bounceInLeft
 						i.material-icons
 
@@ -43,25 +43,10 @@ html
 				img(src="img/loading.png").photo-card
 			
 
-		section.col-md-13.jobs.row
-			#carousel-example-generic.carousel.slide(data-ride='carousel')
-				ol.carousel-indicators
-					li.active(data-target='#carousel-example-generic', data-slide-to='0')
-					li(data-target='#carousel-example-generic', data-slide-to='1')
-					li(data-target='#carousel-example-generic', data-slide-to='2')
-				.carousel-inner(role='listbox')
-					.item.active
-						img(src='img/fundo2.jpg', alt='...')
-						.carousel-caption
-					.item
-						img(src='img/user.jpg', alt='...')
-						.carousel-caption ...
-				a.left.carousel-control(href='#carousel-example-generic', role='button', data-slide='prev')
-					span.glyphicon.glyphicon-chevron-left(aria-hidden='true')
-					span.sr-only Previous
-				a.right.carousel-control(href='#carousel-example-generic', role='button', data-slide='next')
-					span.glyphicon.glyphicon-chevron-right(aria-hidden='true')
-					span.sr-only Next
+		section.col-md-13.jobs.row.center
+			.quadros
+			
+
 
 		section.col-md-13.social.row
 			h1.title.col-md-13.center Social
