--- a/jade/index.jade
+++ b/jade/index.jade
@@ -19,7 +19,7 @@ html
 						
 
 			main.row
-				.fundo.col-md-13
+				.fundo.col-md-12
 					img(src="img/fundo2.jpg" )
 				.header.center.col-md-12.transparent
 					.descr
@@ -31,8 +31,8 @@ html
 						i.material-icons
 
 		
-		section.center.col-md-13.skills.row
-			h1.title.col-md-13.center#trab Trabalhos
+		section.center.col-md-12.skills.row
+			h1.title.col-md-12.center#trab Trabalhos
 			.jobs-box.col-md-6.col-xs-12.center.col-lg-3.border.wow.flipInX
 				img(src="img/lbook.png").photo-card
 			.jobs-box.col-md-6.col-xs-12.col-lg-3.center.wow.flipInX
@@ -43,13 +43,14 @@ html
 				img(src="img/loading.png").photo-card
 			
 
-		section.col-md-13.jobs.row.center
+		section.col-md-12.jobs.row.center
+			.des.col-md-12 Desenvolvimento em:
 			.quadros
 			
 
 
-		section.col-md-13.social.row
-			h1.title.col-md-13.center Social
+		section.col-md-12.social.row
+			h1.title.col-md-12.center Social
 			span.social-box.col-md-6.col-xs-12.center.border
 				i.fa.fa-facebook-square.icons.wow.flipInX
 			span.social-box.col-md-6.col-xs-12.center
