--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 @import "frameworks/materialize";
 
 $element-color : #009688;
-$pane-color:  #DEDEDE;
+$pane-color:  #fff;
 *{
 	padding: 0px;
 	margin:0;
@@ -13,7 +13,7 @@ $pane-color:  #DEDEDE;
 	height: 450px;
 	overflow: hidden;
 	img{
-		width:auto;
+		width:100%;
 		height: 106%;
 		&:hover{
 			height: 600px;
@@ -248,7 +248,9 @@ $pane-color:  #DEDEDE;
 	}
 }
 
-.jobs{
-
+.des{
+	color:$element-color;
+	font-size: 30px;
+	text-shadow: 0px 0px 10px white;
 }
 
