--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13359,7 +13359,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   height: 450px;
   overflow: hidden; }
   .fundo img {
-    width: auto;
+    width: 100%;
     height: 106%;
     animation-name: borda;
     animation-duration: 20s;
@@ -13431,7 +13431,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   text-shadow: 0 0 10px black; }
 
 .social {
-  background-color: #DEDEDE;
+  background-color: #fff;
   padding-top: 0px; }
   .social .social-box {
     padding: 20px;
@@ -13511,7 +13511,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
     background-size: auto 300px; } }
 .skills {
   transition: all 0.3s ease-in;
-  background-color: #DEDEDE;
+  background-color: #fff;
   padding: 50px; }
 
 .photo-card {
@@ -13523,5 +13523,10 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   transition: all 0.2s linear; }
   .photo-card:hover {
     transform: rotate(2deg); }
+
+.des {
+  color: #009688;
+  font-size: 30px;
+  text-shadow: 0px 0px 10px white; }
 
 /*# sourceMappingURL=style.css.map */
