--- a/jade/index.jade
+++ b/jade/index.jade
@@ -159,6 +159,10 @@ html
 				h3.titulo-sobre.col-md-12.text-center Entre em contato
 				.traco-content.col-md-12
 					.traco.border-black
+				.social.text-center.col-md-12
+					i.fa.fa-facebook-official(aria-hidden='true')
+					i.fa.fa-github(aria-hidden='true')
+				.email.text-center.col-md-12 luanjs.if@gmail.com
 				
 		script(type="text/javascript" src="static/framesjs/wow.min.js")
 		script.
