--- a/jade/index.jade
+++ b/jade/index.jade
@@ -15,7 +15,7 @@ html
 		.content
 			.header.col-md-12
 				.info-pessoal.col-md-6.col-md-offset-3
-					.foto.col-md-2.col-md-offset-5
+					.foto
 					
 						
 				.sobre-mim.col-md-10.col-md-offset-1 Olá! meu nome é
@@ -40,11 +40,11 @@ html
 					h4.col-md-12 titulo
 					p.wow.fadeInLeft Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae mi id urna luctus lacinia. Maecenas egestas in magna vel tristique. Donec non interdum diam. Nunc ac arcu orci. Morbi sed leo at justo faucibus consequat. Nullam lectus massa, facilisis eu eros non, cursus placerat nisl. Morbi euismod mi eu eros consequat, id sodales massa rhoncus. Donec vel consectetur mi, id dictum dolor. Maecenas maximus et erat nec dictum. Phasellus vulputate libero sed mauris lacinia pulvinar. In tristique lacus mauris, tincidunt elementum purus ullamcorper id. Curabitur nec quam lectus. Vestibulum sed turpis sed libero fermentum facilisis. Mauris eu purus sit amet risus hendrerit venenatis. Vestibulum in nisl felis. Praesent ultrices tincidunt elit in elementum.
 
-				.about-esq.col-about.col-md-5
-					img.book.col-md-6.col-md-offset-3.wow.fadeInRight
+				.about-esq.col-about.col-md-5.hidden-xs
+					img.book.wow.fadeInRight
 
 				.about-esq.col-about.col-md-5.col-md-offset-1
-					img.book.col-md-6.col-md-offset-3.wow.fadeInRight
+					img.book.wow.fadeInRight
 
 				.about-dir.col-about.col-md-5
 					h4.col-md-12 titulo
@@ -136,6 +136,8 @@ html
 						input#radio-jade.radios(type='radio', name="tecnologia")
 						input#radio-js.radios(type='radio', name="tecnologia")
 						input#radio-html.radios(type='radio', name="tecnologia")
+						.traco-preto-content.col-md-12
+							.traco-preto.border-black
 						
 				.desenvolvimento2.col-md-6.border-black
 					.titulo-tecnologias.col-md-12.text-center
