--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,13 +19,9 @@ body {
   width: 100%;
   overflow: hidden; }
 
-.border-white {
-  /*border: 1px white solid;*/ }
-
 .header {
-  height: 88vh;
   background-color: #111111;
-  z-index: 0; }
+  z-index: 100; }
   .header .sobre-mim {
     font-family: 'Raleway', sans-serif;
     text-align: center;
@@ -44,6 +40,8 @@ body {
     .header .info-pessoal .foto {
       /* border: 1px white solid;*/
       height: 100px;
+      width: 100px;
+      margin: 0 auto;
       border-radius: 100%;
       background-image: url("../../img/user.jpg"); }
 
@@ -56,6 +54,7 @@ body {
   z-index: 100; }
 
 .divisor1 {
+  z-index: 0;
   background-color: #111111;
   transform: rotate(3.5deg) translateY(-42%) scale(2, 1);
   box-shadow: 0 1px 1px #111111; }
@@ -69,7 +68,7 @@ body {
 .divisor3 {
   background-color: #111111;
   transform: rotate(-3.5deg) translateY(-42%) scale(2, 1);
-  z-index: 100; }
+  z-index: 0; }
 
 .divisor4 {
   z-index: 0;
@@ -91,7 +90,9 @@ body {
     /*  border: 1px solid black;*/ }
 
 .book {
-  height: 100%;
+  margin: 0 auto;
+  height: 256px;
+  width: 256px;
   background-image: url("../../img/books.png");
   background-repeat: no-repeat; }
   .book img {
@@ -162,15 +163,15 @@ body {
   width: 200px;
   border: 2px solid white;
   border-top: 2px solid #111111;
-  margin: 0 45px;
   border-radius: 50%;
   overflow: hidden;
   box-shadow: 0 4px 5px -2px white;
   float: left;
   transform: rotate(0deg);
-  transition: all 0.05s linear; }
-  .circle:hover {
-    transform: rotate(2deg); }
+  transition: all 0.05s linear;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%); }
 
 @keyframes wave-10 {
   0% {
@@ -1542,6 +1543,11 @@ body {
   margin: 0 auto;
   border: 1px solid #13B87C; }
 
+.traco-preto {
+  width: 100px;
+  margin: 0 auto;
+  border: 1px solid #111111; }
+
 .wave {
   background: #111;
   height: 200px;
@@ -1704,5 +1710,22 @@ body {
     content: "luan"; }
   100% {
     content: "souza"; } }
+@media screen and (max-width: 768px) {
+  .about-esq {
+    margin-top: 50px; }
+
+  .skill {
+    margin-bottom: 100px;
+    height: 300px; }
+
+  .desenvolvimento-texto {
+    overflow: auto; }
+
+  .divisor3 {
+    transform: rotate(-3deg) translateY(-70%) scale(2, 1); }
+
+  .area-3d {
+    margin-top: 0;
+    transform: scale(0.5, 0.5); } }
 
 /*# sourceMappingURL=style.css.map */
